<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="sg.com.commute_solutions.bustracker.fragments.charters.DisputedCharterActivity" >

    <include layout="@layout/include_progress_overlay"/>

    <LinearLayout
        android:id="@+id/empty_dispute_background"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="#6B6B6B">
    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="visible" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#F68B1F"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#F2F1EF"
                android:text="@string/title_activity_dispute" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:paddingTop="66dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fillViewport="true">

        <TableLayout
            android:id="@+id/table_dispute"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:orientation="vertical">
        </TableLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/iv_empty_dispute_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="60dp"
        android:visibility="gone"
        android:src="@drawable/noresults"/>

    <TextView
        android:id="@+id/txt_empty_dispute_message"
        android:layout_marginTop="143dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        android:layout_gravity="top|center_horizontal"
        android:text="@string/no_dispute_text"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_charteringMenu5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:elevation="6dp"
        app:menu_icon="@drawable/menuicon"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:menu_fab_size="mini"
        app:menu_openDirection="down">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_profile5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile"
            app:menu_colorNormal="#2272CD"
            app:fab_size="mini"
            app:fab_label="@string/profile" />

        <!--<com.github.clans.fab.FloatingActionButton-->
            <!--android:id="@+id/fab_dispute3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/createcharter"-->
            <!--app:menu_colorNormal="#2272CD"-->
            <!--app:fab_size="mini"-->
            <!--app:fab_label="@string/dispute" />-->

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_toTracking5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/totracker"
            app:menu_colorNormal="#2272CD"
            app:fab_size="mini"
            app:fab_label="@string/toTracking" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_successfulBids5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/successfulbids"
            app:menu_colorNormal="#2272CD"
            app:fab_size="mini"
            app:fab_label="@string/successfulBids" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_ownCharter5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mycharter"
            app:menu_colorNormal="#2272CD"
            app:fab_size="mini"
            app:fab_label="@string/ownCharter" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_viewCharter5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/availablecharterlist"
            app:menu_colorNormal="#2272CD"
            app:fab_size="mini"
            app:fab_label="@string/viewCharter" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_newCharter5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/createcharter"
            app:menu_colorNormal="#2272CD"
            app:fab_size="mini"
            app:fab_label="@string/newCharter" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>