<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="sg.com.commute_solutions.bustracker.fragments.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/btn_language"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:src="@drawable/language_option" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/include_progress_overlay"/>

    <LinearLayout
        android:id="@+id/flAccessCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dp">

        <TextView
            android:id="@+id/lblPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/tracker_route_greet"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblAcessCodeDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracker_route_lblrouteid"
            android:textAlignment="center"
            tools:text="@string/tracker_route_lblrouteid" />

        <EditText
            android:id="@+id/txtAccessCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tracker_route_txtrouteid"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/btnNext"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/next"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/routeProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!--<TextView-->
        <!--android:id="@+id/error_msg"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingLeft="10dp" />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAutoFetch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:elevation="0dp"
            android:text="@string/tracker_route_btnautofetch" />

        <LinearLayout
            android:id="@+id/flVehicleNo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBusIcon"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/bus_type_40" />

            <TextView
                android:id="@+id/lblUpdateVehicle"
                android:layout_width="185dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tracker_route_lblupdateplateno"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/txtVehicleNo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tracker_route_txtupdateplateno"
                android:textAlignment="center"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
